(fix) Align action button size in the sidebar

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -90,7 +90,7 @@
 }
 
 .button {
-  width: 11rem;
+  width: 10rem;
 }
 
 .topMargin {
